--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     ]
   },
   "devDependencies": {
-    "@types/cytoscape": "^3.21.5"
+    "@types/cytoscape": "^3.21.5",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.6"
   }
 }
